--- a/js/index.html
+++ b/js/index.html
@@ -6,7 +6,8 @@
     <title>Containers demo</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+      <!-- built files will be auto injected -->
+    <div id="app">
+    </div>
   </body>
 </html>
